feat: complete signup and admin app updates
